# confocal-raytracer

./: .gitignore  README.md  _utils.py  aspheric.py  launcher.py  pyproject.toml  ray.py  raytrace.py  setup.py
confocal_raytracer/: load_data.py
confocal_raytracer/data/: load_data.py  n_intensity_500_800_new.csv
confocal_raytracer/simulation/: _utils.py  ray.py  raytrace.py  setup.py
raytracer/: analysis.py
raytracer/simulation/: _utils.py  aspheric.py  launcher.py  raytrace.py
