[tool.poetry]
name = "confocal-raytracer"
version = "0.1.2"
description = "Raytrace module"
authors = ["Kiril Ivanov Kurtev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
